# AnnotationTool

./: README.md
lib/: utility_function.cc
src/: CMakeLists.txt  annotate_video.cpp
